feat: add GitHub CI/CD pipeline and project structure
- Add GitHub Actions workflows for CI, releases, and documentation
- Add GoReleaser configuration for multi-platform builds
- Add comprehensive test suite structure
- Add MIT license and contributing guidelines
- Update README with badges, better structure, and examples
- Improve Makefile with release and tagging targets
- Add .gitignore for Go projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-.DS_Store
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 kubectl-rebalance
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Dependency directories
+vendor/
+
+# Go workspace file
+go.work
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS specific files
+.DS_Store
+Thumbs.db
+
+# Release artifacts
+dist/
+
+# Local environment files
+.env
+.env.local
