fix: add missing module declaration in go.mod
- Add 'module github.com/ssccio/rebalance' to go.mod
- Add debug output to CI workflow
- This should fix the 'directory not found' error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Debug directory structure
+      run: |
+        pwd
+        ls -la
+        ls -la cmd/ || echo "cmd directory not found"
+        find . -name "*.go" -type f | head -20
+
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
@@ -46,6 +53,12 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+
+    - name: Debug directory structure
+      run: |
+        pwd
+        ls -la
+        ls -la cmd/ || echo "cmd directory not found"
 
     - name: Set up Go
       uses: actions/setup-go@v5
