--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        go: ['1.21', '1.22']
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -63,7 +62,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: ${{ matrix.go }}
+        go-version: '1.21'
 
     - name: Build
       run: go build -v -o kubectl-rebalance ./cmd/kubectl-rebalance
@@ -71,5 +70,5 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: kubectl-rebalance-${{ matrix.os }}-go${{ matrix.go }}
+        name: kubectl-rebalance-${{ matrix.os }}
         path: kubectl-rebalance
