feat: add gofmt -s flag to pre-commit
- Ensure code is simplified using gofmt -s
- Helps maintain consistent code style
- Addresses gofmt warnings from code quality reports

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
     rev: v0.5.1
     hooks:
       - id: go-fmt
+        args: [-s]  # Add simplify flag
       - id: go-imports
       - id: go-mod-tidy
 
