ci: add gofmt -s check to CI workflow
- Ensures code formatting is verified in CI
- Matches pre-commit checks
- Should help with Go Report Card compliance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,14 @@ jobs:
     - name: Verify dependencies
       run: go mod verify
 
+    - name: Check formatting
+      run: |
+        if [ -n "$(gofmt -s -l .)" ]; then
+          echo "The following files need formatting:"
+          gofmt -s -l .
+          exit 1
+        fi
+
     - name: Run go vet
       run: go vet ./...
 
